FIXED a old BUG: If you REALLY overshrink the header, it wraps to 2 lines - this is now a lot nicer. Again, life without bootstrap made it hard. Should use bootstrap or tailwind next time.

--- a/webapp-meteor/client/main.css
+++ b/webapp-meteor/client/main.css
@@ -439,6 +439,20 @@ body {
   }
 }
 
+/* Responsive navbar - Third stage: Hide filter dropdown */
+@media screen and (max-width: 700px) {
+  .navbar .filter-dropdown {
+    display: none !important;
+  }
+}
+
+/* Responsive navbar - Fourth stage: Hide size badge */
+@media screen and (max-width: 600px) {
+  .navbar .size-badge {
+    display: none !important;
+  }
+}
+
 /* Stats base styles to ensure they're shown by default */
 .navbar .stats {
   display: flex;
